# LocalTeam

./: .conductor-checkpoint.json  .gitattributes  .gitignore  LICENSE  README.md  index.html  localteam.json  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml
scripts/: build-sidecar-linux.mjs  build-sidecar-windows.mjs  release-windows.ps1
src/: App.css  App.tsx  main.tsx
src-sidecar/: package-lock.json  package.json  tsconfig.json
src-sidecar/src/: agent.ts  assignment.ts  command-safety.ts  consensus.ts  decomposition.ts  gateway-bridge.ts  gateway-types.ts  handlers.ts  index.ts  message-bus.ts  orchestrator.ts  persistence.ts  protocol.ts  runtime.ts  sqljs.d.ts  task-manager.ts  team-config.ts  types.ts  workspace-path.ts
src-sidecar/tests/: agent.test.ts  assignment.test.ts  command-safety.test.ts  consensus.test.ts  decomposition.test.ts  gateway-bridge.test.ts  handlers.test.ts  helpers.ts  message-bus.test.ts  orchestrator.test.ts  persistence.test.ts  protocol.test.ts  runtime-interjection.test.ts  runtime-observability.test.ts  runtime-packaged-bootstrap.test.ts  runtime-watcher-filter.test.ts  runtime.test.ts  task-manager.test.ts  team-config.test.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.e2e.conf.json
src-tauri/binaries/: .gitignore  .gitkeep
src-tauri/capabilities/: default.json
src-tauri/src/: chrome.rs  credentials.rs  e2e.rs  ipc.rs  lib.rs  main.rs  sidecar.rs  tray.rs
src/components/: CommandApprovalsPanel.tsx  CredentialOnboardingPrompt.tsx  Topbar.tsx  (+9 more)
templates/: default-team.json
(+51 files in other folders)
